--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: #1a1a1a;
+    background-color:navy blue;
     display: flex;
     justify-content: center;
     align-items: center;
