--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,115 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
 body {
-  background-color: lightblue;
+    background-color: green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-h1 {
-  color: white;
-  text-align: center;
+.container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
+    max-width: 1280px;
+    gap: 20px;
 }
 
-p {
-  font-family: verdana;
-  font-size: 20px;
+.border {
+    height: 369px;
+    width: 290px;
+    background: transparent;
+    border-radius: 10px;
+    transition: border 1s;
+    position: relative;
+}
+
+.border:hover {
+    border: 1px solid white;
+}
+
+.card {
+    height: 379px;
+    width: 300px;
+    border-radius: 10px;
+    transition: background 0.8s;
+    overflow: hidden;
+    background-color: black;
+    box-shadow: 0 70px 63px -60px #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    flex-direction: column; /* makes text/icons stack properly */
+}
+
+/* Background images */
+.card0 {
+    background: url('https://i.pinimg.com/736x/8f/a0/51/8fa051251f5ac2d0b756027089fbffde--terry-o-neill-al-pacino.jpg') center center no-repeat;
+    background-size: 300px;
+}
+
+.card0:hover {
+    background: url('https://i.pinimg.com/736x/8f/a0/51/8fa051251f5ac2d0b756027089fbffde--terry-o-neill-al-pacino.jpg') left center no-repeat;
+    background-size: 600px;
+}
+
+.card1 {
+    background: url('https://i.pinimg.com/originals/28/d2/e6/28d2e684e7859a0dd17fbd0cea00f8a9.jpg') center center no-repeat;
+    background-size: 300px;
+}
+
+.card1:hover {
+    background: url('https://i.pinimg.com/originals/28/d2/e6/28d2e684e7859a0dd17fbd0cea00f8a9.jpg') left center no-repeat;
+    background-size: 600px;
+}
+
+.card2 {
+    background: url('https://i.pinimg.com/originals/ee/85/08/ee850842e68cfcf6e3943c048f45c6d1.jpg') center center no-repeat;
+    background-size: 300px;
+}
+
+.card2:hover {
+    background: url('https://i.pinimg.com/originals/ee/85/08/ee850842e68cfcf6e3943c048f45c6d1.jpg') left center no-repeat;
+    background-size: 600px;
+}
+
+/* Text inside card */
+h2 {
+    color: white;
+    margin: 20px 0 0 0;
+    opacity: 0;
+    transition: opacity 1s;
+    z-index: 2;
+}
+
+.card:hover h2,
+.card:hover .icons i {
+    opacity: 1;
+}
+
+/* Icons inside card */
+.icons {
+    position: absolute;
+    bottom: 20px;
+    color: #fff;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.icons i {
+    opacity: 0;
+    transition: opacity 1s;
+    font-size: 20px;
+    cursor: pointer;
+}
+
