--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 nav {
     display: flex;
     justify-content: center; /* This centers the items along the main axis */
-    background-color: #555;
+    background-color: #C2C2FF;
     padding: 10px;
 }
 
@@ -14,11 +14,12 @@ nav a {
 body {
     font-family: sans-serif;
     margin: 0;
-    background-color: #f4f4f4;
+    background-color: #FEFFC2;
 }
 
+
 header {
-    background-color: #333;
+    background-color: #C2C2FF;
     color: white;
     padding: 10px;
     text-align: center;
@@ -41,5 +42,3 @@ section {
         align-items: center;    /* Centers the items on the cross-axis */
     }
 }
-
-
